# chess-mentor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: .gitignore  main.py  pyproject.toml
backend/auth/: dependencies.py  router.py  schemas.py  service.py
backend/core/: config.py  errors.py  security.py
backend/db/: database.py  models.py
backend/puzzles/: router.py  schemas.py  service.py
backend/scripts/: seed_puzzles.py
backend/tests/: conftest.py  test_change_email_duplicate.py  test_change_email_success.py  test_change_email_wrong_password.py  test_change_password_revokes_sessions.py  test_change_password_success.py  test_change_password_too_short.py  test_change_password_wrong_current.py  test_delete_account_success.py  test_delete_account_wrong_password.py  test_internal_error_handler.py  test_login_success.py  test_login_unknown_user.py  test_login_wrong_password.py  test_logout_revokes_refresh.py  test_me_invalid_token.py  test_me_requires_auth.py  test_me_success.py  test_refresh_invalid_token.py  test_refresh_reuse_rejected.py  test_refresh_rotates_token.py  test_register_duplicate_email.py  test_register_invalid_email.py  test_register_short_password.py  test_register_success.py  test_validation_error_shape.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: SessionGuard.tsx
frontend/src/contexts/: AuthContext.ts  AuthProvider.tsx  ToastContext.ts  ToastProvider.tsx
frontend/src/hooks/: useAuth.ts  usePuzzle.ts  useToast.ts  (+1 more)
(+46 files in other folders)
